Version 0.4
-----------
03/06/2020 Added experimental support for EBNF repetition and optional
           syntax.  For example, here is a rule for a comma-separated
           expression list:

               @('expr { COMMA expr }')
               def exprlist(p):
                   return [ p.expr0 ] + p.expr1

           In this code, the { ... } means zero-or-more repetitions.
           It turns all symbols inside into lists.  So, instead of
           representing a single value, p.expr1 is now a list of 
           values.  

           An optional value can be enclosed in brackets like this:

              @('VAR NAME [ EQUAL expr ] SEMI')
              def variable_declaration(p):
                  print(f"Definining {p.NAME}. Initial value={p.expr}")

           In this case, all symbols inside [ ... ] either have a value
           if present or are assigned to None if missing.

           In both cases, you continue to use the same name indexing
           scheme used by the rest of SLY.  For example, in the first
           example above, you use "expr0" and "expr1" to refer to the
           different "expr" symbols since that name appears in more
           than one place.

04/09/2019 Fixed very mysterious error message that resulted if you 
           defined a grammar rule called "start".   start can now 
           be a string or a function.

04/09/2019 Minor refinement to the reporting of reduce/reduce conflicts.
           If a top grammar rule wasn't specified, SLY could fail with 
           a mysterious "unknown conflict" exception.  This should be
           fixed.

11/18/2018 Various usability fixes observed from last compilers course.

            - Errors encountered during grammar construction are now
              reported as part of the raised GrammarError exception
              instead of via logging.  This places them in the same
              visual position as normal Python errors (at the end
              of the traceback)
