@@ -1,5 +1,8 @@
 Version 0.4
 -----------
+05/09/2020 Changed the internal names used for EBNF rules to make them
+           a bit easier to debug in the parser.out file.
+
 03/06/2020 Added experimental support for EBNF repetition and optional
            syntax.  For example, here is a rule for a comma-separated
            expression list:
